--- a/web-server/dockerfile
+++ b/web-server/dockerfile
@@ -1,4 +1,4 @@
-M python:3.9-alpine
+FROM python:3.9-alpine
 WORKDIR /.app
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
